syntax = "proto3";
package panacea.did.v2;

import "google/api/annotations.proto";
// this line is used by starport scaffolding # 1
import "panacea/did/v2/did.proto";

option java_multiple_files = true;
option go_package = "github.com/medibloc/panacea-core/x/did/types";

// Query defines the gRPC querier service.
service QueryService {
  // DID returns a DID Document with a sequence number.
  rpc DID(QueryServiceDIDRequest) returns (QueryServiceDIDResponse) {
    option (google.api.http).get = "/panacea/did/v2/dids/{did_base64}";
  }
}

// QueryDIDRequest is the request type for the Query/DIDDocumentWithSeq RPC
// method.
message QueryServiceDIDRequest {
  // NOTE: Using base64 due to the URI path cannot contain colons.
  string did_base64 = 1;
}

// QueryDIDResponse is the response type for the Query/DIDDocumentWithSeq RPC
// method.
message QueryServiceDIDResponse { DIDDocumentWithSeq did_document_with_seq = 1; }
