syntax = "proto3";
package panacea.did.v3;

option java_multiple_files = true;
option go_package = "github.com/medibloc/panacea-core/x/did/types";

import "gogoproto/gogo.proto";
import "panacea/did/v3/did.proto";

// Msg defines the Msg service.
service Msg {
  // CreateDID defines a method for creating a DID.
  rpc CreateDID(MsgCreateDID) returns (MsgCreateDIDResponse);

  // UpdateDID defines a method for updating a DID.
  rpc UpdateDID(MsgUpdateDID) returns (MsgUpdateDIDResponse);

  // DeactivateDID defines a method for deactivating a DID.
  rpc DeactivateDID(MsgDeactivateDID) returns (MsgDeactivateDIDResponse);
}

// TODO: the signature filed will be deleted as document proof is applied
// MsgCreateDID defines the Msg/CreateDID request type.
message MsgCreateDID {
  string did = 1;
  DIDDocument document = 2;
  string verification_method_id = 3;
  string from_address = 4;
}

// MsgCreateDIDResponse defines the Msg/CreateDID response type.
message MsgCreateDIDResponse {}

// MsgUpdateDID defines the Msg/UpdateDID request type.
message MsgUpdateDID {
  string did = 1;
  DIDDocument document = 2;
  string verification_method_id = 3;
  string from_address = 4;
}

// MsgUpdateDIDResponse defines the Msg/UpdateDID response type.
message MsgUpdateDIDResponse {}

// MsgDeactivateDID defines the Msg/DeactivateDID request type.
message MsgDeactivateDID {
  string did = 1;
  string from_address = 2;
}

// MsgDeactivateDIDResponse defines the Msg/DeactivateDID response type.
message MsgDeactivateDIDResponse {}
